--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             const name = document.getElementById("name").value;
             const age = document.getElementById("age").value;
 
-            const response = await fetch("http://localhost:5000/add", {
+            const response = await fetch("https://ngrok.com/new-features-update?ref=private", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ name, age })
