--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             const name = document.getElementById("name").value;
             const age = document.getElementById("age").value;
 
-            const response = await fetch("https://ngrok.com/r/ipintel", {
+            const response = await fetch("https://7679-2401-4900-7901-333f-716e-7ddf-f84a-f208.ngrok-free.app", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ name, age })
